opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/core_unix"
bug-reports: "https://github.com/janestreet/core_unix/issues"
dev-repo: "git+https://github.com/janestreet/core_unix.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/core_unix/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.14.0"}
  "core"
  "core_kernel"
  "expect_test_helpers_core"
  "jane-street-headers"
  "jst-config"
  "ocaml_intrinsics"
  "ppx_jane"
  "ppx_optcomp"
  "sexplib"
  "timezone"
  "base-threads"
  "dune"                     {>= "2.0.0"}
  "spawn"                    {>= "v0.15"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Unix-specific portions of Core"
description: "
Unix-specific extensions to some of the modules defined in [core] and [core_kernel].
"
depexts: ["linux-headers"] {os-family = "alpine"}
