(rule
 (targets config.h)
 (deps)
 (action
  (bash "cp %{lib:jst-config:config.h} .")))

(library
 (foreign_stubs
  (language c)
  (names pthread_np_stubs))
 (name core_thread)
 (public_name core_unix.core_thread)
 (libraries core_kernel.caml_threads core signal_unix unix)
 (preprocessor_deps config.h)
 (preprocess
  (pps ppx_jane ppx_optcomp)))
