(library
 (foreign_stubs
  (language c)
  (names error_checking_mutex_stubs))
 (name error_checking_mutex)
 (public_name core_unix.error_checking_mutex)
 (preprocess
  (pps ppx_jane))
 (libraries core_kernel.caml_threads core threads))

(rule
 (targets ocaml_runtime_props.h)
 (deps)
 (action
  (bash "echo \"#define OCAML_DEPENDENT_MEM_TRACKING true\" > %{targets}")))
