(library
 (foreign_stubs
  (language c)
  (names iobuf_stubs))
 (name iobuf_unix)
 (public_name core_unix.iobuf_unix)
 (libraries bigstring_unix core core_kernel.iobuf)
 (preprocessor_deps config.h)
 (preprocess
  (pps ppx_jane ppx_optcomp)))

(rule
 (targets config.h)
 (deps)
 (action
  (bash "cp %{lib:jst-config:config.h} .")))
