(library
 (foreign_stubs
  (language c)
  (names time_stamp_counter_stubs))
 (name time_stamp_counter)
 (public_name core_unix.time_stamp_counter)
 (preprocess
  (pps ppx_jane ppx_optcomp))
 (preprocessor_deps config.h)
 (js_of_ocaml
  (javascript_files time_stamp_counter_stubs.js))
 (libraries core))

(rule
 (targets config.h)
 (deps)
 (action
  (bash "cp %{lib:jst-config:config.h} %{targets}")))
